--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -2172,3 +2172,11 @@ msgstr ""
 msgid "Not a valid float value."
 msgstr ""
 
+#: app/templates/auth/login.html:38
+msgid "Not a member?"
+msgstr "Pas encore membre ?"
+
+#: app/templates/auth/login.html:40
+msgid "Register here for free"
+msgstr "Inscrivez-vous gratuitement ici"
+
