--- a/app/translations/en/LC_MESSAGES/messages.po
+++ b/app/translations/en/LC_MESSAGES/messages.po
@@ -2180,3 +2180,11 @@ msgstr "Not a member?"
 msgid "Register here for free"
 msgstr "Register here for free"
 
+#: app/templates/pricing.html:43
+msgid "Continue on Free Plan"
+msgstr "Continue on Free Plan"
+
+#: app/templates/pricing.html:46
+msgid "You have a paid subscription"
+msgstr "You have a paid subscription"
+
