--- a/app/translations/it/LC_MESSAGES/messages.po
+++ b/app/translations/it/LC_MESSAGES/messages.po
@@ -2216,3 +2216,9 @@ msgstr "Attualmente sei sul Piano Gratuito"
 msgid "No credit card required"
 msgstr "Nessuna carta di credito richiesta"
 
+msgid "Free Plan"
+msgstr "Piano Gratuito"
+
+msgid "Upgrade Plan"
+msgstr "Aggiorna Piano"
+
