--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -438,41 +438,40 @@ msgstr ""
 
 #: app/templates/calendar.html:59
 msgid "Select Patient..."
-msgstr ""
+msgstr "Sélectionner Patient..."
 
 #: app/templates/calendar.html:67 app/templates/index.html:240
 #: app/templates/patient_detail.html:168 app/templates/treatment_detail.html:19
 msgid "Date"
-msgstr ""
+msgstr "Date"
 
 #: app/templates/calendar.html:76
 msgid "Treatment Type"
-msgstr ""
+msgstr "Type de Traitement"
 
 #: app/templates/calendar.html:77
 msgid "e.g., Initial Assessment, Follow-up"
-msgstr ""
+msgstr "ex., Évaluation Initiale, Suivi"
 
 #: app/templates/calendar.html:80 app/templates/review_payments.html:23
-#, fuzzy
 msgid "Location"
-msgstr "Connexion"
+msgstr "Lieu"
 
 #: app/templates/calendar.html:82
 msgid "CostaSpine Clinic"
-msgstr ""
+msgstr "Clinique CostaSpine"
 
 #: app/templates/calendar.html:83
 msgid "Home Visit"
-msgstr ""
+msgstr "Visite à Domicile"
 
 #: app/templates/calendar.html:84
 msgid "Online"
-msgstr ""
+msgstr "En Ligne"
 
 #: app/templates/calendar.html:88
 msgid "Notes (Optional)"
-msgstr ""
+msgstr "Notes (Optionnel)"
 
 #: app/templates/calendar.html:97
 msgid "Create Appointment"
